[gd_scene load_steps=21 format=2]

[ext_resource path="res://game_assets/Stickman Character Sprites 05/Character Sprites/Idle (4).png" type="Texture" id=1]
[ext_resource path="res://src/Character/Player.gd" type="Script" id=2]
[ext_resource path="res://game_assets/Stickman Character Sprites 05/Character Sprites/Idle (6).png" type="Texture" id=3]
[ext_resource path="res://game_assets/Stickman Character Sprites 05/Character Sprites/Idle (5).png" type="Texture" id=4]
[ext_resource path="res://game_assets/Stickman Character Sprites 05/Character Sprites/Idle (7).png" type="Texture" id=5]
[ext_resource path="res://game_assets/Stickman Character Sprites 05/Character Sprites/Idle (3).png" type="Texture" id=6]
[ext_resource path="res://game_assets/Stickman Character Sprites 05/Character Sprites/Idle (2).png" type="Texture" id=7]
[ext_resource path="res://game_assets/Stickman Character Sprites 05/Character Sprites/Idle (8).png" type="Texture" id=8]
[ext_resource path="res://game_assets/Stickman Character Sprites 05/Character Sprites/Idle (1).png" type="Texture" id=9]
[ext_resource path="res://game_assets/Stickman Character Sprites 05/Character Sprites/Run (2).png" type="Texture" id=10]
[ext_resource path="res://game_assets/Stickman Character Sprites 05/Character Sprites/Run (6).png" type="Texture" id=11]
[ext_resource path="res://game_assets/Stickman Character Sprites 05/Character Sprites/Run (4).png" type="Texture" id=12]
[ext_resource path="res://game_assets/Stickman Character Sprites 05/Character Sprites/Run (3).png" type="Texture" id=13]
[ext_resource path="res://game_assets/Stickman Character Sprites 05/Character Sprites/Jump.png" type="Texture" id=14]
[ext_resource path="res://game_assets/Stickman Character Sprites 05/Character Sprites/Run (5).png" type="Texture" id=15]
[ext_resource path="res://game_assets/Stickman Character Sprites 05/Character Sprites/Run (1).png" type="Texture" id=16]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 1 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 10 ), ExtResource( 13 ), ExtResource( 12 ), ExtResource( 15 ), ExtResource( 11 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 14.7535
height = 56.0897

[sub_resource type="CapsuleShape2D" id=3]
radius = 7.27756
height = 30.0291

[sub_resource type="CapsuleShape2D" id=4]
radius = 6.86344

[node name="Player" type="KinematicBody2D"]
collision_mask = 8
script = ExtResource( 2 )
gravity = 4000.0
speed = Vector2( 800, 2000 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.085, 0.085 )
frames = SubResource( 1 )
frame = 4
playing = true
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.198425, 7.93701 )
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -50.336 )
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="ItemDetector" type="Area2D" parent="."]
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="ItemDetector"]
position = Vector2( -0.297638, 7.34173 )
shape = SubResource( 3 )

[node name="HealthBar" type="ProgressBar" parent="."]
margin_left = -237.933
margin_top = -179.455
margin_right = -110.933
margin_bottom = -165.455
max_value = 1000.0
value = 1000.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthLabel" type="Label" parent="HealthBar"]
margin_left = 6.36395
margin_top = -13.0815
margin_right = 48.364
margin_bottom = 0.918518
text = "Health"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="."]
margin_left = 203.647
margin_top = -191.626
margin_right = 243.647
margin_bottom = -177.626
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemyDetector" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetector"]
light_mask = 0
position = Vector2( 0, 12.7186 )
shape = SubResource( 4 )

[connection signal="area_entered" from="ItemDetector" to="." method="_on_ItemDetector_area_entered"]
[connection signal="body_entered" from="EnemyDetector" to="." method="_on_EnemyDetector_body_entered"]
